--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head></head>
 <body>
 <h1>Hacked yhoho</h1>
-<a href="sandikrxyzn.blogspot.com">Blog</a>
+<a href="https://sandikrxyzn.blogspot.com">Blog</a>
 </body>
 </html>
