--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <table width=100% height=100%>
   <td align=center>
     <div id="q">hacked by krxyzn</div><br>
-    <a href="https://sandikrxyz.blogspot.com">blog</a>
+    <a href="https://sandikrxyzn.blogspot.com">blog</a>
   </td>
 </table>
